FIX: Set `height` property to `auto` to prevent image stretching.

--- a/packages/block-library/src/image/style.scss
+++ b/packages/block-library/src/image/style.scss
@@ -125,6 +125,13 @@
 	}
 }
 
+.wp-block-image .components-resizable-box__container img {
+	display: block;
+	height: auto;
+	width: inherit;
+	max-width: 100%;
+}
+
 // Variations
 :root :where(.wp-block-image.is-style-rounded img, .wp-block-image .is-style-rounded img) {
 	// We use an absolute pixel to prevent the oval shape that a value of 50% would give
@@ -285,17 +292,20 @@
 		@media not (prefers-reduced-motion) {
 			animation: both turn-on-visibility 0.25s;
 		}
+
 		img {
 			@media not (prefers-reduced-motion) {
 				animation: both turn-on-visibility 0.35s;
 			}
 		}
 	}
+
 	&.show-closing-animation {
 		&:not(.active) {
 			@media not (prefers-reduced-motion) {
 				animation: both turn-off-visibility 0.35s;
 			}
+
 			img {
 				@media not (prefers-reduced-motion) {
 					animation: both turn-off-visibility 0.25s;
@@ -310,6 +320,7 @@
 				opacity: 1;
 				visibility: visible;
 				animation: none;
+
 				.lightbox-image-container {
 					animation: lightbox-zoom-in 0.4s;
 					// Override fade animation for image
@@ -317,13 +328,16 @@
 						animation: none;
 					}
 				}
+
 				.scrim {
 					animation: turn-on-visibility 0.4s forwards;
 				}
 			}
+
 			&.show-closing-animation {
 				&:not(.active) {
 					animation: none;
+
 					.lightbox-image-container {
 						animation: lightbox-zoom-out 0.4s;
 						// Override fade animation for image
@@ -331,6 +345,7 @@
 							animation: none;
 						}
 					}
+
 					.scrim {
 						animation: turn-off-visibility 0.4s forwards;
 					}
