--- a/packages/components/src/resizable-box/style.scss
+++ b/packages/components/src/resizable-box/style.scss
@@ -28,6 +28,7 @@ $resize-handler-container-size: $resize-handler-size + ($grid-unit-05 * 2); // M
 // Make the image inside the resize to get the full width
 .components-resizable-box__container > img {
 	width: inherit;
+	height: auto;
 }
 
 // This is the "visible" resize handle - the circle part
